tests/errors/sem.expected-signed-or-float.minus-op.or
main :: () -> void {
    x := 8u;
    -x;
};
